--- a/client/Views/App/product/checkout.html
+++ b/client/Views/App/product/checkout.html
@@ -1,12 +1,12 @@
 <template name="checkout">
-	<section class="checkout">
+	<section class="checkout" dir="{{getDirection}}">
     	<div class="wrapper-checkout">
             <div class="row">
 				<div class="col-xs-12">
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<p class="p-title">
-								Add $26.01 for FREE Shipping. <a href="">See details</a>
+								{{_"Add $26.01 for FREE Shipping."}} <a href="">{{_"See details"}}</a>
 							</p>
 						</div>
 						<div class="panel-body">
@@ -37,8 +37,8 @@
 					<div class="col-xs-8">
 						<h4 class="title-product">{{title}}</h4>
 						<h4 class="price-product">{{../subtotal}}</h4>
-						<p class="date">In stock on {{date}}</p>
-						<p class="free">Free Shipping</p>
+						<p class="date">{{_"In stock on"}} {{date}}</p>
+						<p class="free">{{_"Free Shipping"}}</p>
 					</div>
 				{{/with}}
 
@@ -57,13 +57,13 @@
 					      <li><a href="#" class="qty">5</a></li>  
 					    </ul>
 					  </div>
-					  <button type="button" class="btn btn-checkout" id="removecheckout">Delete</button>
+					  <button type="button" class="btn btn-checkout" id="removecheckout">{{_"Delete"}}</button>
 					</div>
 				</div>
 			</div>
 				<div class="clearfix"></div>
 				<div class="col-xs-12">
-					<p class="text-center color-gray">Get $50 gift card upon approval for the <br> Amazon.com Reward Visa Card</p>
+					<p class="text-center color-gray">{{_"Get $50 gift card upon approval for the "}}<br>{{_"Amazon.com Reward Visa Card"}}</p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
