--- a/client/Views/App/product/confirmorder.html
+++ b/client/Views/App/product/confirmorder.html
@@ -5,7 +5,7 @@
 		}
 	</style>
 	<div id="wrapper">
-		<div class="container-fluid">
+		<div class="container-fluid" dir="{{getDirection}}">
 			<!-- Page Heading -->
             <div class="row">
                 <div class="col-xs-12">
@@ -13,9 +13,9 @@
 					<div class="col-xs-12">
                         {{#with getprofile}}
                             <b>{{username}}</b>
-                            <h5>floor 3</h5>
+                            <h5>{{_"floor"}} 3</h5>
                             {{#each emails}}
-	                            <h5>Email: {{address}}</h5>
+	                            <h5>{{_"Email:"}} {{address}}</h5>
                             {{/each}}
                             <h5 id="oldAddress">{{getAddress1}}</h5>
                         {{/with}}
