--- a/client/Views/App/tuto/tuto.html
+++ b/client/Views/App/tuto/tuto.html
@@ -1,5 +1,5 @@
 <template name="tutolist">
-		 <div class="container">		
+		 <div class="container" dir="{{getDirection}}">		
 		  <div class="clearfix"></div>
             <div class="space_cont_top">
              <div class="row">
