--- a/public/css/developer.css
+++ b/public/css/developer.css
@@ -1,7 +1,7 @@
 .nonelike{
 	display: none;
 }
-/********** KA *************/
+/**********  *************/
 /** refine brand **/
 a.alphabet, a.targetBrand, .info a{
 	color: #fff;
@@ -53,7 +53,7 @@ button#btnshopcart{
     width: 277px; background: transparent -moz-linear-gradient(center top , #F7DFA5, #F0C14B) repeat scroll 0% 0%;
     font-size: 16px;
 }
-/********** KA *************/
+/**********  *************/
 
 /* ============ LOGIN =============*/
  #pass-info {
@@ -95,3 +95,27 @@ button#btnshopcart{
     text-shadow: 1px 1px 1px #296429;
 }
 .hid_div{display: none}
+
+/*=== header style ===*/
+
+.menu > li a {
+    height: 48px;
+    outline: 0px none;
+    position: relative;
+    text-decoration: none;
+    display: block;
+    width: 50%;
+}
+ul li.info {
+    font-weight: bold;
+    color: #000;
+    width: 50%;
+}
+ul li a span.menu-li-title {
+    font-size: 12px;
+    margin-left: 0px;
+    line-height: 50px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #FFF;
+}
