--- a/client/Views/App/forum/update_forum.html
+++ b/client/Views/App/forum/update_forum.html
@@ -1,35 +1,68 @@
 <template name="updateForum">
-	<div class="container">
-    <h1>Add New Post</h1>
-      <form class="form-horizontal" role="form" method="post">
-     <div class="form-group">
-        <label for="title" class="col-sm-2 control-label">Topic</label>
-        <div class="col-sm-6">
-            <input type="text" class="form-control" value="{{topic}}" id="topic" name="topic">
+    <div class="col-xs-12">
+        <div class="row">
+            <div class="hold_refine">
+                <ul class="refine_menu list-inline">
+                    <div class="col-xs-6">
+                        <li class="active">
+                            <a href="#" id="makeup">TOPIC <i class="fa fa-caret-down"></i></a>
+                        </li>
+                    </div>
+                </ul>
+                <div id="panel_makeup">
+                    <ul class="make-up">
+                    {{#each listCategories}}
+                        <li><a href="#" id="category">{{title}}</a></li>
+                    {{/each}}
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        <label for="message" class="col-sm-2 control-label">Description</label>
-        <div class="col-sm-6">
-            <textarea class="form-control" rows="4" value="{{description}}" name="description" id="description"></textarea>
-        </div>
-    </div>
-        <div class="form-group">
-        <label for="message" class="col-sm-2 control-label">Select image:</label>
-        <div class="col-sm-6">
-            <input type="file" multiple  name="image" id="image" class="your-upload-class">
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-6 col-sm-offset-2">
-            <input id="update" name="update" type="button" value="Update" class="btn btn-primary">
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-6 col-sm-offset-2">
-            <!-- Will be used to display an alert to the user -->
-        </div>
-    </div>
-</form>
-   </div>
+    <article>
+        <section class="shadow_bottom">
+            <div class="wrapper">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h4 id="topicName"> {{getCategoryName category}} </h4>
+                        <div class="hold-click-each-comment">
+                            <div class="row">
+                                {{#with getprofile}}
+                                <div class="col-xs-4">
+                                    {{#if image}}
+                                        <img src="{{getImg image}}" class="img-responsibve">
+                                    {{else}}
+                                        <img src="/img/menu1.png" class="img-responsibve">
+                                    {{/if}}
+                                </div>
+                                {{/with}}
+                                <div class="col-xs-8">
+                                    <p class="p-usr-name">{{#with getprofile}}{{profile.firstname}} {{profile.lastname}}{{/with}}</p>
+                                    <!-- <div class="timer">
+                                        <ul class="list-inline">
+                                            <li>07 20 2015</li>
+                                            <li>11:16 PM</li>
+                                        </ul>
+                                    </div> -->
+                                </div>
+
+                            </div>
+                            <hr class="hr-usr">
+                            <div class="hold-object">
+                                <input type="text" class="input" value="{{topic}}" placeholder="Write your topic..." required id="topic" style="background-color: #ebebeb; border-color:#ebebeb; ">
+
+                                <textarea rows="20" cols="200" id="description" class="input" value="{{description}}" placeholder="Write what you want..." ></textarea>
+                                <div class="clearfix"></div>
+                                <div class="block-comment">
+                                     <label>Choose Image<a href=""><img src="/img/attach-file.png" name="image" id="images"></a>
+                                    <input type="file" id="image" style="display: none;" /></label>
+                                    <button class="pull-right" id="update">UPDATE</button>
+                                </div>
+                            </div>
+                        </div><!-- hold-click-each-comment -->
+                    </div> <!-- col-xs-12 -->
+                </div> <!-- row -->
+            </div>
+        </section>
+    </article>
 </template>
