--- a/public/css/developer.css
+++ b/public/css/developer.css
@@ -53,8 +53,10 @@ button#btnshopcart{
     width: 277px; background: transparent -moz-linear-gradient(center top , #F7DFA5, #F0C14B) repeat scroll 0% 0%;
     font-size: 16px;
 }
-/**********  *************/
-
+/********** Left menu *************/
+ul li ul#child-left-forum{
+    background-color: #2a2b2e;
+}
 /* ============ LOGIN =============*/
  #pass-info {
     border-radius: 4px;
