--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -75,11 +75,11 @@
 			</li>
 		</ul>
     </section> <!-- #menu-wrapper -->
-	<section id="sidebar-wrapper">
+	<section id="sidebar-wrapper" dir="{{getDirection}}">
 		<div class="widget">
 			<ul>
 				<li class="item">
-					<a href="#" id="price_range">Price Range</a>
+					<a href="#" id="price_range">{{_"Price Range"}}</a>
 				</li>
 				<!--panel price range -->
 				<div class="panel_price_range">
@@ -100,11 +100,11 @@
 						  	<label><input type="checkbox" value="4000" class="right-menu" data-max="1000000" data-min="100000" name="checkbox"> 3M to 4M</label>
 						</div>
 						<div class="checkbox">
-						  	<label><input type="checkbox" value="100000000" class="right-menu" data-max="10000000" name="checkbox"> All</label>
+						  	<label><input type="checkbox" value="100000000" class="right-menu" data-max="10000000" name="checkbox">{{_"All"}}</label>
 						</div>
 					</div>
 				</div>
-				<li class="item"><a href="#" id="brands">Brands</a></li>
+				<li class="item"><a href="#" id="brands">{{_"Brands"}}</a></li>
 				<!-- panel brands -->
 				<div class="panel_brands col-xs-12">
 					<div class="col-xs-2 refine-item tohide">
