--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -69,9 +69,14 @@
 				</a>
 			</li>
 			<li class="icon info">
-				<a href="/forum/listing">
+				<a href="">
 					<span class="menu-li-title left-menu">{{_"FORUM"}}</span>
 				</a>
+				<ul id="submenu-1" style="display: none;">
+					<li><a href="forum/listing">List Forum</a></li>
+					<li><a href="forum/myforum"></a>Manage Forum</li>
+					<li><a href="forum/addnew">Add Forum</a></li>
+				</ul>
 			</li>
 		</ul>
     </section> <!-- #menu-wrapper -->
