--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -74,13 +74,13 @@
 				</a>
 				<ul id="child-left-forum">
 					<li class="left-menu"><a href="/forum/listing">
-						<span>Listing Forum</span>
+						<span class="forum">LIST FORUM</span>
 					</a></li>
 					<li class="left-menu"><a href="/forum/myforum">
-						<span>My Forum</span>
+						<span>MY FORUM</span>
 					</a></li>
 					<li class="left-menu"><a href="/forum/addnew">
-						<span>Add Forum</span>
+						<span>ADD FORUM</span>
 					</a></li>
 				</ul>
 			</li>
