--- a/client/Views/App/tuto/tutodetails.html
+++ b/client/Views/App/tuto/tutodetails.html
@@ -22,6 +22,7 @@
 				{{#if currentUser}}
 					<div class="col-xs-12">
 						<form role="form">
+							<p id="validTuto" style="color:red"></p>
 							<div class="form-group">
 							  <textarea class="form-control" rows="5" id="comment" placeholder="Write what you want here..."></textarea>
 							</div>
