--- a/client/Views/App/forum/myforum.html
+++ b/client/Views/App/forum/myforum.html
@@ -1,25 +1,40 @@
 <template name="myforum">
-<div class="container">
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Topic</th>
-        <th>Description</th>
-        <th>Date</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    {{#each listallmyforums}}
-    <tbody>
-          <tr>
-            <td><a href="/forum/detail/{{_id}}">{{topic}}</a></td>
-            <td><a href="/forum/detail/{{_id}}">{{description}}</a></td>
-            <td><a href="/forum/detail/{{_id}}">{{date}}</a></td>
-            <td><button id="delete">Delete</button> | <a href="/forum/updateforum/{{_id}}"><button>Update</button></a></td>
-          </tr>
-    </tbody>
-    {{/each}}
-  </table>
-</div>
+  <article>
+      <section class="shadow_bottom">
+            <div class="wrapper">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12">
+                      <div class="widget-box row">
+                          <div class="widget-title">
+                              <h2><i class="glyphicon glyphicon-tasks"></i>Manage Forum</h2>
+                          </div>
+                          <div class="widget-container table-responsive">
+                            <table class="table table-hover table-striped order-table table-green">
+                                <thead>
+                                    <tr>
+                                        <th>Topic</th>
+                                        <th>Description</th>
+                                        <th>Date</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </thead>
 
- </template>
+                            {{#each listallmyforums}}
+                                <tbody>
+                                    <tr>
+                                        <td><a href="/forum/detail/{{_id}}">{{topic}}</a></td>
+                                        <td><a href="/forum/detail/{{_id}}">{{description}}</a></td>
+                                        <td><a href="/forum/detail/{{_id}}">{{date}}</a></td>
+                                        <td><button id="delete">Delete</button> | <a href="/forum/updateforum/{{_id}}"><button>Update</button></a></td>
+                                    </tr>
+                                </tbody>
+                            {{/each}}
+                            </table>    
+                          </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+      </section>
+    </article>
+</template>
