--- a/public/css/developer.css
+++ b/public/css/developer.css
@@ -130,3 +130,8 @@ ul li a span.menu-li-title {
     text-transform: uppercase;
     color: #FFF;
 }
+ /*video style*/
+#mainVideo {
+    display: inline-block;
+    padding-right: 55px;
+}
