validate reply forum

--- a/client/Views/App/forum/detail_forum.html
+++ b/client/Views/App/forum/detail_forum.html
@@ -38,6 +38,7 @@
                                 <div class="col-xs-12">
                                     <h4 class="text-center">{{_ "REPLY"}}</h4>
                                     <label>{{_ "Description"}}</label>
+                                    <p style="color: red;" class="hidden error">{{_ "Field description is invalid!"}}</p>
                                     <textarea id="description" class="form-control popup-textarea" rows="5"></textarea>
                                     <div class="col-xs-12">
                                         <a href="" class="btn-send pull-right">{{_ "SEND"}}</a>
