--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -75,13 +75,13 @@
 				</a>
 				<ul id="child-left-forum">
 					<li class="left-menu"><a href="/forum/listing">
-						<span class="forum">LIST FORUM</span>
+						<span class="menu-li-title">LIST FORUM</span>
 					</a></li>
 					<li class="left-menu"><a href="/forum/myforum">
-						<span>MY FORUM</span>
+						<span class="menu-li-title">MY FORUM</span>
 					</a></li>
 					<li class="left-menu"><a href="/forum/addnew">
-						<span>ADD FORUM</span>
+						<span class="menu-li-title">ADD FORUM</span>
 					</a></li>
 				</ul>
 			</li>
