fix refine menu

--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -147,7 +147,7 @@
 					</div>
 					<div class="col-xs-10 brand-item">
 						<div class="hold_item_brands">
-							<div class="nav nav-pills" id="allBrands">
+							<div class="nav nav-pills sticker" style="position:fixed;" id="allBrands">
 								
 							</div>
 						</div>
@@ -161,4 +161,9 @@
 		    $('#sl2').slider();     
 		});
     </script>
+   <!--  <script>
+    $(window).load(function(){
+      $(".sticker").sticky({ topSpacing: 0, center:true, className:"hey" });
+    });
+  </script> -->
 </template>
