--- a/public/css/developer.css
+++ b/public/css/developer.css
@@ -130,3 +130,19 @@ ul li a span.menu-li-title {
     text-transform: uppercase;
     color: #FFF;
 }
+
+/* sticky for scrool in refine menu*/
+/*.sticker {
+      background: #bada55;
+      color: white;
+      width: 300px;
+      font-family: Droid Sans;
+      font-size: 40px;
+      line-height: 1.6em;
+      font-weight: bold;
+      text-align: center;
+      padding: 20px;
+      margin: 0 auto;
+      text-shadow: 0 1px 1px rgba(0,0,0,.2);
+      border-radius: 50px;
+    }*/
