--- a/client/Views/App/quizz/quizz.html
+++ b/client/Views/App/quizz/quizz.html
@@ -1,58 +1,43 @@
-<template name="quizzQA">
-	<article>
+<template name="quizzs">
+    <article>
     	<div class="wrapper">
-			<div class="main-bg-choose-makeup2">
+			<div class="main-bg-choose-makeup1">
 				<div class="panel-choose-makeup1 panel-default">
-					<div class="panel-heading logo2" >
-						<div class="row">
-							<div class="col-xs-4 col-md-4">
-								<img src="/img/safir.png" class="img-logo2">
-							</div>
-							<div class="col-xs-4 col-md-4">
-								<img src="/img/3sum-icons.png" class="img-logo3 center-block">
-							</div>
-							<div class="col-xs-4 col-md-4">
-								<h2 class="cat write text-right">Lips</h2>
-							</div>
-						</div>
+					<div class="panel-heading logo">
+						<img src="img/safir.png" class="logo1 center-block ">
 					</div>
 					<div class="panel-body text-center"> 
-						
+						<div class="bg-white section1">
+							<div class="col-md-4">
+								<img src="img/3sum-icons-grey.png" class="img-responsive img-choose-makeup1">
+							</div>
+							<div class="col-md-8">
+								<p >With the quiz affinity meets the makeup that fits you </p>
+							</div>
+						</div>
+						<div class="bg-white section2">
+							<div class="col-md-4">
+								<img src="img/tick-box.png" class="img-responsive img-choose-makeup1">
+							</div>
+							<div class="col-md-8">
+								<p>Complete your profile and be better advised</p>
+							</div>
+						</div>
+						<div class="section3">
 							<div class="row">
-								<div class="col-md-8 col-md-offset-2">
-								{{#with getFirstQu question}}
-									<div class="section1-question">
-										<div class="col-md-12">
-											<p class="question text-center">{{question}}</p>
-										</div>
-									</div>
-									{{#each answers}}
-										<div class="answer-radia">
-											<div class="col-md-4 col-md-offset-3">
-												<label class="radio">
-													<input id="face" type="radio" name="radios_checkbox" value="{{value}}">
-													<span class="outer"><span class="inner"></span></span>{{value}}
-												</label>
-												
-											</div>
-										</div>
-
-									{{/each}}
-									{{/with}}
-									<div class="section3">
-										<div class="row">
-											<div class="col-xs-8 col-xs-offset-2 col-md-2 col-md-offset-3 ">
-												<div type="button" class="btn btn-default center-block" data-toggle="modal" data-target="#next" id="goNext">Submit </div>
-											</div>
-										</div>
-									</div>
+								<div class="col-md-6">												
+									<div class="btn btn-block btn-ask" type="button">Ask me later </div>
+								</div>
+								<div class="col-md-6">
+									<a href="/listQuizz"><div class="btn btn-block btn-Begins pull-right" type="button">Begins </div></a>
 								</div>
 							</div>
-						
+						</div>
 					</div>
 					
 				</div>
 			</div>
 		</div>
-    </article>               
+    </article> <!-- #slider -->
+
 </template>
