scroll on refine

--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -148,7 +148,7 @@
 					</div>
 					<div class="col-xs-10 brand-item">
 						<div class="hold_item_brands">
-							<div class="nav nav-pills sticker" style="position:fixed;" id="allBrands">
+							<div class="nav nav-pills sticker" id="allBrands">
 								
 							</div>
 						</div>
