--- a/public/css/developer.css
+++ b/public/css/developer.css
@@ -9,9 +9,17 @@ a.alphabet, a.targetBrand, .info a{
 }
 div.refine-item{
 	padding: 0px;
+    overflow: scroll;
+    height: 240px;
 }
 div.brand-item{
 	padding-left: 0px;
+    position: relative;
+}
+.hold_item_brands{
+    overflow: scroll;
+    height: 240px;
+    padding-left: 5px;
 }
 /** listing product **/
 .styleImg{
