--- a/client/Views/App/forum/myforum.html
+++ b/client/Views/App/forum/myforum.html
@@ -1,6 +1,5 @@
 <template name="myforum">
-<!-- <<<<<<< HEAD -->
-  <article>
+    <article>
       <section class="shadow_bottom">
             <div class="wrapper">
                 <div class="row">
@@ -19,50 +18,22 @@
                                         <th>Action</th>
                                     </tr>
                                 </thead>
-
-                            {{#each listallmyforums}}
                                 <tbody>
+                                    {{#each listallmyforums}}
                                     <tr>
                                         <td><a href="/forum/detail/{{_id}}">{{topic}}</a></td>
                                         <td><a href="/forum/detail/{{_id}}">{{description}}</a></td>
-                                        <td><a href="/forum/detail/{{_id}}">{{date}}</a></td>
+                                        <td><a href="/forum/detail/{{_id}}">{{getDate date}}</a></td>
                                         <td><button id="delete">Delete</button> | <a href="/forum/updateforum/{{_id}}"><button>Update</button></a></td>
                                     </tr>
+                                    {{/each}}
                                 </tbody>
-                            {{/each}}
                             </table>    
                           </div>
                       </div>
                     </div>
                 </div>
             </div>
-      </section>
+        </section>
     </article>
 </template>
-<!-- =======
-<div class="container">
-  <table class="table table-striped">
- 
-    <thead>
-      <tr>
-        <th>Topic</th>
-        <th>Description</th>
-        <th>Date</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    {{#each listallmyforums}}
-    <tbody>
-          <tr>
-            <td><a href="/forum/detail/{{_id}}">{{topic}}</a></td>
-            <td><a href="/forum/detail/{{_id}}">{{description}}</a></td>
-            <td><a href="/forum/detail/{{_id}}">{{date}}</a></td>
-            <td><button id="delete">Delete</button> | <a href="/forum/updateforum/{{_id}}"><button>Update</button></a></td>
-          </tr>
-    </tbody>
-    {{/each}}
-  </table>
-</div>
- <h1>{{getTime date}}</h1>
- </template>
->>>>>>> b8380917e917ef3aee6a6b2b550182d18b2ebee5 -->
