tranlsate checkout page Edit profile

--- a/client/Views/App/product/checkout.html
+++ b/client/Views/App/product/checkout.html
@@ -63,7 +63,8 @@
 			</div>
 				<div class="clearfix"></div>
 				<div class="col-xs-12">
-					<p class="text-center color-gray">{{_"Get $50 gift card upon approval for the "}}<br>{{_"Amazon.com Reward Visa Card"}}</p>
+					<p class="text-center color-gray">{{_"Get $50 gift card upon approval for the"}}</p>
+					<p class="text-center color-gray">{{_"Amazon.com Reward Visa Card"}}</p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
