--- a/client/Views/App/product/checkout.html
+++ b/client/Views/App/product/checkout.html
@@ -37,7 +37,7 @@
 					<div class="col-xs-8">
 						<h4 class="title-product">{{title}}</h4>
 						<h4 class="price-product">{{../subtotal}}</h4>
-						<p class="date">{{_"In stock on"}} {{date}}</p>
+						<p class="date">{{_"In stock on"}} {{getDate date}} {{getTime date}}</p>
 						<p class="free">{{_"Free Shipping"}}</p>
 					</div>
 				{{/with}}
