fix manage forum

--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -75,13 +75,13 @@
 				</a>
 				<ul id="child-left-forum">
 					<li class="left-menu"><a href="/forum/listing">
-						<span class="forum">{{_"LIST FORUM"}}</span>
+						<span class="menu-li-title">{{_"LIST FORUM"}}</span>
 					</a></li>
 					<li class="left-menu"><a href="/forum/myforum">
-						<span>{{_"MY FORUM"}}</span>
+						<span class="menu-li-title">{{_"MY FORUM"}}</span>
 					</a></li>
 					<li class="left-menu"><a href="/forum/addnew">
-						<span>{{_"ADD FORUM"}}</span>
+						<span class="menu-li-title">{{_"ADD FORUM"}}</span>
 					</a></li>
 				</ul>
 			</li>
