--- a/client/Views/App/forum/myforum.html
+++ b/client/Views/App/forum/myforum.html
@@ -23,8 +23,15 @@
                                     <tr>
                                         <td><a href="/forum/detail/{{_id}}">{{topic}}</a></td>
                                         <td><a href="/forum/detail/{{_id}}">{{description}}</a></td>
-                                        <td><a href="/forum/detail/{{_id}}">{{date}}</a></td>
-                                        <td><button id="delete">{{_"Delete"}}</button> | <a href="/forum/updateforum/{{_id}}"><button>{{_"Update"}}</button></a></td>
+                                        <td><a href="/forum/detail/{{_id}}">{{getDate date}}</a></td>
+                                        <td>
+                                            <span id="delete" class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                            <!-- <button id="delete">{{_"Delete"}}</button>  -->| 
+                                            <a href="/forum/updateforum/{{_id}}">
+                                                <!-- <button>{{_"Update"}}</button> -->
+                                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                            </a>
+                                        </td>
                                     </tr>
                                     {{/each}}
                                 </tbody>
