--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -80,7 +80,7 @@
 	margin: 0px 0px 8px;
 	padding: 6px 12px 10px 12px;
 }
-.b1{
+.div.showbutton button.b1{
 	display: block;
 	background:url(../img/btn-quiz1.png) no-repeat;
 }
