--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -36,6 +36,11 @@
 	                            <span class="menu-li-title left-menu">{{_"Rewards & points"}}</span>
 	                        </a>
 	                    </li>
+	                    <li>
+	                        <a href="/listQuizz">
+	                            <span class="menu-li-title left-menu">{{_"Quizz"}}</span>
+	                        </a>
+	                    </li>
 	                </ul>
 	            </li>
 	            <li>
