--- a/client/Views/App/forum/add_forum.html
+++ b/client/Views/App/forum/add_forum.html
@@ -48,12 +48,12 @@
                             </div>
                             <hr class="hr-usr">
                             <div class="hold-object">
-                                <input type="text" class="input" placeholder="Write your topic..." required id="topic" style="background-color: #ebebeb; border-color:#ebebeb; ">
-                                <textarea rows="20" cols="200" id="description" class="input" placeholder="Write what you want..." ></textarea>
+                                <input type="text" class="input" placeholder="{{_ "Write your topic"}}..." required id="topic" style="background-color: #ebebeb; border-color:#ebebeb; ">
+                                <textarea rows="20" cols="200" id="description" class="input" placeholder="{{_ "Write what you want"}}..." ></textarea>
                                 <div class="clearfix"></div>
                                 <div class="block-comment">
                                      <label>{{_"Choose Image"}}<a href=""><img src="/img/attach-file.png" name="image" id="images"></a>
-                                    <input type="file" id="image" style="display: none;" /></label>
+                                    <input type="file" id="upload" style="display: none;" /></label>
                                     <button class="pull-right" id="addPost">{{_"ADD FORUM"}}</button>
                                 </div>
                             </div>
