--- a/public/css/developer.css
+++ b/public/css/developer.css
@@ -171,7 +171,7 @@ ul li a span.menu-li-title {
     }*/
 
 /*stylesheet for page list forum */
-p.title-comment{
+/*p.title-comment{
     font-size: 12px;
     margin: 5px 0 0 5px;
 }
@@ -182,4 +182,4 @@ p.title-comment{
 }
 div.hold-reply-row ul.list-inline{
     margin-left: 0px;
-}
+}*/
